Closed Bug 1636999 Opened 5 years ago Closed 5 years ago

[socket process] handle the case that connection manager is used when socket process is not ready

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Found this bug when running netwerk/test/unit/test_speculative_connect.js.
In current implementation, we mConnMgr will be null if socket process is not ready. Then, we will have a crash when SpeculativeConnect() is called.

Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9b5bab2cb404 Use CallOrWaitForSocketProcess in HttpConnectionMgrParent r=dragana
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: