Bug 1636999 - Use CallOrWaitForSocketProcess in HttpConnectionMgrParent r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D74697